Finish every function, but city name is still a problem

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,10 @@ dependencies {
     implementation libs.firebase.analytics
     implementation libs.play.services.location
     implementation libs.firebase.firestore
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Test helper
+    testImplementation "androidx.room:room-testing:$room_version"
 }
